fix(ui): version dropdown text overflow

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -162,6 +162,10 @@ hr {
   right: 0;
 }
 
+.dropdown .navbar__link {
+  @apply text-sm;
+}
+
 .navbar__item {
   display: block;
 }
@@ -172,5 +176,5 @@ hr {
 }
 
 .dropdown {
-  @apply flex-1 flex justify-end items-center rounded-md h-12;
+  @apply flex justify-end items-center rounded-md h-12;
 }
